templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: gitlab
  name: gitlab
spec:
  ports:
  - name: "22"
    port: 22
    targetPort: 22
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: gitlab
status:
  loadBalancer: {}
